[gd_scene load_steps=5 format=3 uid="uid://dq8sxf6oabjnm"]

[ext_resource type="PackedScene" uid="uid://dmlpnp15mw2fo" path="res://addons/window_system/windows/base_window.tscn" id="1_uerpl"]
[ext_resource type="Theme" uid="uid://03q268pfdt2r" path="res://src/themes/font_theme.tres" id="2_5d3u0"]
[ext_resource type="Script" uid="uid://cd6kkomqlbspw" path="res://src/windows/dbase/dbase_window.gd" id="2_d2ulm"]
[ext_resource type="StyleBox" uid="uid://8fmbo06bq5bv" path="res://src/themes/window_panel_theme.tres" id="4_xdice"]

[node name="DBase100Window" instance=ExtResource("1_uerpl")]
offset_right = 944.0
offset_bottom = 627.0
theme = ExtResource("2_5d3u0")
script = ExtResource("2_d2ulm")
panel_corner_radius = 0
panel_style_override = ExtResource("4_xdice")

[node name="TabContainer" type="TabContainer" parent="Contents/VBoxContainer/MainContainer" index="0"]
layout_mode = 2
current_tab = 0

[node name="Commands" type="MarginContainer" parent="Contents/VBoxContainer/MainContainer/TabContainer" index="1"]
layout_mode = 2
metadata/_tab_index = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/TabContainer/Commands" index="0"]
layout_mode = 2

[node name="CommandList" type="ItemList" parent="Contents/VBoxContainer/MainContainer/TabContainer/Commands/HBoxContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
allow_reselect = true
auto_width = true

[node name="SplitContainer" type="SplitContainer" parent="Contents/VBoxContainer/MainContainer/TabContainer/Commands/HBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CommandTree" type="Tree" parent="Contents/VBoxContainer/MainContainer/TabContainer/Commands/HBoxContainer/SplitContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 2
column_titles_visible = true
allow_reselect = true
allow_rmb_select = true
hide_folding = true
hide_root = true
select_mode = 1

[node name="CommandPanel" type="PanelContainer" parent="Contents/VBoxContainer/MainContainer/TabContainer/Commands/HBoxContainer/SplitContainer" index="1"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Inventory" type="MarginContainer" parent="Contents/VBoxContainer/MainContainer/TabContainer" index="2"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/TabContainer/Inventory" index="0"]
layout_mode = 2

[node name="InventoryList" type="ItemList" parent="Contents/VBoxContainer/MainContainer/TabContainer/Inventory/HBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
allow_reselect = true
allow_rmb_select = true
auto_width = true

[node name="InventoryPanel" type="PanelContainer" parent="Contents/VBoxContainer/MainContainer/TabContainer/Inventory/HBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Cutscenes" type="MarginContainer" parent="Contents/VBoxContainer/MainContainer/TabContainer" index="3"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/TabContainer/Cutscenes" index="0"]
layout_mode = 2

[node name="CutsceneList" type="ItemList" parent="Contents/VBoxContainer/MainContainer/TabContainer/Cutscenes/HBoxContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
allow_reselect = true
allow_rmb_select = true
auto_width = true

[node name="CutscenePanel" type="PanelContainer" parent="Contents/VBoxContainer/MainContainer/TabContainer/Cutscenes/HBoxContainer" index="1"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Interface" type="MarginContainer" parent="Contents/VBoxContainer/MainContainer/TabContainer" index="4"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/TabContainer/Interface" index="0"]
layout_mode = 2

[node name="InterfaceList" type="ItemList" parent="Contents/VBoxContainer/MainContainer/TabContainer/Interface/HBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Animations" type="MarginContainer" parent="Contents/VBoxContainer/MainContainer/TabContainer" index="5"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/TabContainer/Animations" index="0"]
layout_mode = 2

[node name="DBase200List" type="ItemList" parent="Contents/VBoxContainer/MainContainer/TabContainer/Animations/HBoxContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
allow_reselect = true
allow_rmb_select = true
auto_width = true

[node name="DBase200Panel" type="PanelContainer" parent="Contents/VBoxContainer/MainContainer/TabContainer/Animations/HBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="AnimationTimer" type="Timer" parent="Contents/VBoxContainer/MainContainer/TabContainer/Animations" index="1"]
unique_name_in_owner = true
wait_time = 0.1

[node name="Icons" type="MarginContainer" parent="Contents/VBoxContainer/MainContainer/TabContainer" index="6"]
visible = false
layout_mode = 2
metadata/_tab_index = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/TabContainer/Icons" index="0"]
layout_mode = 2

[node name="IconList" type="ItemList" parent="Contents/VBoxContainer/MainContainer/TabContainer/Icons/HBoxContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
allow_reselect = true
allow_rmb_select = true
auto_width = true

[node name="IconPanel" type="PanelContainer" parent="Contents/VBoxContainer/MainContainer/TabContainer/Icons/HBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="Contents/VBoxContainer/MainContainer/TabContainer/Icons/HBoxContainer/IconPanel" index="0"]
layout_mode = 2

[node name="SFX" type="MarginContainer" parent="Contents/VBoxContainer/MainContainer/TabContainer" index="7"]
visible = false
layout_mode = 2
metadata/_tab_index = 6

[node name="HBoxContainer" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/TabContainer/SFX" index="0"]
layout_mode = 2

[node name="SFXList" type="ItemList" parent="Contents/VBoxContainer/MainContainer/TabContainer/SFX/HBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Backdrop" type="MarginContainer" parent="Contents/VBoxContainer/MainContainer/TabContainer" index="8"]
visible = false
layout_mode = 2
metadata/_tab_index = 7

[node name="BackdropRect" type="TextureRect" parent="Contents/VBoxContainer/MainContainer/TabContainer/Backdrop" index="0"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[connection signal="tab_changed" from="Contents/VBoxContainer/MainContainer/TabContainer" to="." method="_on_tab_container_tab_changed"]
[connection signal="item_selected" from="Contents/VBoxContainer/MainContainer/TabContainer/Commands/HBoxContainer/CommandList" to="." method="_on_command_list_item_selected"]
[connection signal="item_selected" from="Contents/VBoxContainer/MainContainer/TabContainer/Commands/HBoxContainer/SplitContainer/CommandTree" to="." method="_on_command_tree_item_selected"]
[connection signal="item_selected" from="Contents/VBoxContainer/MainContainer/TabContainer/Inventory/HBoxContainer/InventoryList" to="." method="_on_inventory_list_item_selected"]
[connection signal="item_selected" from="Contents/VBoxContainer/MainContainer/TabContainer/Cutscenes/HBoxContainer/CutsceneList" to="." method="_on_cutscene_list_item_selected"]
[connection signal="item_selected" from="Contents/VBoxContainer/MainContainer/TabContainer/Animations/HBoxContainer/DBase200List" to="." method="_on_d_base_200_list_item_selected"]
[connection signal="timeout" from="Contents/VBoxContainer/MainContainer/TabContainer/Animations/AnimationTimer" to="." method="_on_animation_timer_timeout"]
[connection signal="item_selected" from="Contents/VBoxContainer/MainContainer/TabContainer/Icons/HBoxContainer/IconList" to="." method="_on_icon_list_item_selected"]
[connection signal="item_activated" from="Contents/VBoxContainer/MainContainer/TabContainer/SFX/HBoxContainer/SFXList" to="." method="_on_sfx_list_item_activated"]
